# Regressao_MLOPs

./: .dockerignore  .gitignore  dvc.yaml  main.py  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
app/: main.py
app/services/: model_service.py
data/cleaned/: .gitignore
data/splits/: .gitignore
experiments/10_lstm/: notebook.ipynb
experiments/11_model_comparison/: notebook.ipynb
experiments/12_test_ab/: notebook.ipynb
experiments/1_eda/: notebook.ipynb
experiments/2_data_cleaning/: notebook.ipynb
experiments/3_feature_engineering/: notebook.ipynb
experiments/4_stats_hypothesis_tests/: notebook.ipynb
experiments/5_regression_statsmodels/: notebook.ipynb
experiments/6_naive_bayes_regression/: notebook.ipynb
experiments/7_pca/: notebook.ipynb
experiments/8_sarimax/: notebook.ipynb
experiments/9_xgboost_hstatistic/: notebook.ipynb
metrics/: .gitignore  xgboost_validation_metrics.json
src/: __init__.py  register_artifacts.py
src/step_1_data_cleaning/: clean_data.py
src/step_2_feature_engineering/: engineer_features.py
src/step_3_data_splitting/: split_time_series.py
src/step_4_model_training/: train_model.py
src/step_5_model_evaluation/: evaluate_regression.py
tests/: test_api.py  test_clean_data.py  test_engineer_features.py  test_evaluate_regression.py  test_model_service.py  test_register_artifacts.py  test_split_time_series.py  test_train_model.py
